# bes-book-formatter

./: .env.example  .env.production  .eslintrc.cjs  .gitignore  DB-MIGRATION-REPORT.md  MODULE-8-ECU-AUDIT.md  MODULE-8-INTEGRATION-AUDIT.md  MODULE-8-REMEDIATION-TASKS.md  package-lock.json  package.json  stryker.config.json  svelte.config.js  vite.config.ts  vitest.config.ts
.stryker-tmp/sandbox6818852/: .eslintrc.cjs  .gitignore  BACKEND-BUILD-REPORT.md  MODULE-8-CONTRACTS-AUDIT.md  MODULE-8-IPC-AUDIT.md  node_modules  package-lock.json  package.json  vitest.config.ts
.stryker-tmp/sandbox6948485/: .dockerignore  .env.docker.example  MODULE-8-E2E-AUDIT.md  MODULE-8-TYPES-AUDIT.md  READY-TO-DEPLOY.md  stryker.config.json
.stryker-tmp/sandbox7851059/: Dockerfile  MODULE-8-HANDLERS-AUDIT.md  MODULE-8-ROUTES-AUDIT-REPORT.md  MODULE-8-SQLITE-AUDIT.md  stryker.config.json  vite.config.ts
.stryker-tmp/sandbox7851059/src-tauri/: Cargo.toml
.stryker-tmp/sandbox7851059/src-tauri/assets/typst-templates/back-matter/: colophon.typ
.stryker-tmp/sandbox7851059/src-tauri/assets/typst-templates/front-matter/: title-page.typ  toc.typ
.stryker-tmp/sandbox7851059/src-tauri/benches/scenarios/: image_processing.rs  parser_benchmark.rs
.stryker-tmp/sandbox7851059/src-tauri/migrations/: M004_generation_results.sql
.stryker-tmp/sandbox7851059/src-tauri/seeds/: seed.sql
.stryker-tmp/sandbox7851059/src-tauri/src/commands/: generation.rs  system.rs
.stryker-tmp/sandbox7851059/src-tauri/src/db/: mod.rs
.stryker-tmp/sandbox7851059/src-tauri/src/models/: cover.rs  typography.rs
.stryker-tmp/sandbox7851059/src-tauri/src/services/: illustration_sync.rs  platform_presets.rs  preflight_service.rs  typography_rules.rs
.stryker-tmp/sandbox7851059/src-tauri/tests/common/: mod.rs
.stryker-tmp/sandbox8891323/: Makefile  (+5 more)
ai-forge/: _RESOLVE-GAPS-REPORT.md  accessibility-task.md  anti-hacking-fingerprint.md  anti-hacking-report.md  anti-hacking-tasks.md  error-handling-task.md  forms-task.md  hardcodes-task.md  nextjs-accessibility-report.md  nextjs-accessibility-summary.md  nextjs-architecture-report.md  nextjs-architecture-tasks.md  nextjs-hardcodes-report.md  nextjs-hardcodes-summary.md  nextjs-hardcodes-task.md  security-report.md  security-task.md  styling-task.md  typescript-task.md
scripts/: bootstrap.sh
src/: app.css  app.html  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/fonts/jetbrains-mono/: FONT_INFO.txt
src-tauri/assets/typst-templates/presets/: technical.typ
src-tauri/capabilities/: default.json
src-tauri/migrations/: M001_initial_schema.sql  M002_add_error_state.sql  M005_annotations.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/cli/: output.rs  state.rs
src-tauri/src/commands/: generation.rs  mod.rs  parser.rs  preview.rs  projects.rs  system.rs  typography.rs
src-tauri/src/db/: pool.rs
src-tauri/src/models/: enums.rs  generation.rs  manuscript.rs  mod.rs  responses.rs
src-tauri/src/repositories/: annotation_repository.rs  illustration_repository.rs  mod.rs  preference_repository.rs  project_repository.rs
src-tauri/src/services/: common.rs  font_service.rs  illustration_service.rs  migration_service.rs  mod.rs  sidecar_manager.rs  typography_service.rs
src-tauri/tests/: completeness_integration.rs  migration_integration.rs
(+245 files in other folders)
