[package]
name = "bes-book-formatter"
version = "0.1.0"
edition = "2021"
description = "BES Book Formatter — Desktop app for transforming BES manuscripts into publishable books"
authors = ["Pedro Corgnati"]

[lib]
name = "bes_book_formatter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
comrak = "0.26"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy", "html"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "bmp"] }
zip = "2"
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
anyhow = { version = "1", optional = true }
dirs-next = { version = "2", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cli = ["clap", "indicatif", "anyhow", "dirs-next"]

[[bin]]
name = "bes-format"
path = "src/cli/main.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sqlite_operations"
path = "benches/scenarios/sqlite_operations.rs"
harness = false

[[bench]]
name = "parser_benchmark"
path = "benches/scenarios/parser_benchmark.rs"
harness = false

[[bench]]
name = "image_processing"
path = "benches/scenarios/image_processing.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
